[gd_scene load_steps=11 format=3 uid="uid://c1nm548sg063"]

[ext_resource type="Script" path="res://math_race_level1.gd" id="1_fy302"]
[ext_resource type="Texture2D" uid="uid://d1cich3uh3plf" path="res://assets/MathRaceAssets/1st racetrack.png" id="2_scx47"]
[ext_resource type="Texture2D" uid="uid://makue8ov77if" path="res://assets/MathRaceAssets/Enemy_car.svg" id="3_icqfb"]
[ext_resource type="Theme" uid="uid://c72ukk1bonn6d" path="res://src/appdata/Lucrato_Theme.tres" id="5_3r8lc"]
[ext_resource type="Script" path="res://Enemy_Movement.gd" id="6_gcqa2"]
[ext_resource type="Texture2D" uid="uid://mjx5yyhipvt7" path="res://assets/MathRaceAssets/Player_car.svg" id="6_o37fh"]
[ext_resource type="PackedScene" path="res://player_scene.tscn" id="6_xaxed"]
[ext_resource type="PackedScene" uid="uid://of3ei4lci41k" path="res://Victory_Screen.tscn" id="7_g523i"]
[ext_resource type="PackedScene" uid="uid://c18xh6tcyyumi" path="res://Math_answers.tscn" id="7_ktthu"]

[sub_resource type="Curve2D" id="Curve2D_gabe5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 284, 227, 0, 0, 0, 0, 335, 228, 0, 0, 0, 0, 366, 228, 0, 0, 0, 0, 409, 232, 0, 0, 0, 0, 452, 239, 0, 0, 0, 0, 489, 247, 0, 0, 0, 0, 522, 261, 0, 0, 0, 0, 560, 281, 0, 0, 0, 0, 592, 311, 0, 0, 0, 0, 619, 341, 0, 0, 0, 0, 635, 375, 0, 0, 0, 0, 645, 416, 0, 0, 0, 0, 644, 447, 0, 0, 0, 0, 635, 479, 0, 0, 0, 0, 623, 509, 0, 0, 0, 0, 605, 540, 0, 0, 0, 0, 565, 569, 0, 0, 0, 0, 509, 596, 0, 0, 0, 0, 456, 617, 0, 0, 0, 0, 393, 623, 0, 0, 0, 0, 335, 625, 0, 0, 0, 0, 278, 620, 0, 0, 0, 0, 225, 602, 0, 0, 0, 0, 181, 584, 0, 0, 0, 0, 137, 559, 0, 0, 0, 0, 101, 532, 0, 0, 0, 0, 82, 497, 0, 0, 0, 0, 74, 456, 0, 0, 0, 0, 61, 416, 0, 0, 0, 0, 48, 380, 0, 0, 0, 0, 30, 353, 0, 0, 0, 0, -8, 328, 0, 0, 0, 0, -50, 311, 0, 0, 0, 0, -102, 301, 0, 0, 0, 0, -157, 305, 0, 0, 0, 0, -203, 318, 0, 0, 0, 0, -241, 338, 0, 0, 0, 0, -266, 370, 0, 0, 0, 0, -280, 396, 0, 0, 0, 0, -289, 422, 0, 0, 0, 0, -282, 449, 0, 0, 0, 0, -276, 472, 0, 0, 0, 0, -263, 492, 0, 0, 0, 0, -242, 511, 0, 0, 0, 0, -219, 524, 0, 0, 0, 0, -183, 536, 0, 0, 0, 0, -158, 542, 0, 0, 0, 0, -130, 548, 0, 0, 0, 0, -104, 551, 0, 0, 0, 0, -81, 553, 0, 0, 0, 0, -52, 553)
}
point_count = 51

[node name="MathRace" type="CanvasLayer"]
script = ExtResource("1_fy302")

[node name="Racetrack_Background" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.997396
anchor_bottom = 0.834877
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Racetrack_Background" type="TextureRect" parent="Racetrack_Background"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.131238
anchor_right = 1.00348
anchor_bottom = 0.988909
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_scx47")
expand_mode = 2

[node name="Math_question" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.437501
anchor_right = 0.578125
anchor_bottom = 0.146605
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Math_question"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_3r8lc")
theme_override_font_sizes/font_size = 60
metadata/_edit_use_anchors_ = true

[node name="Enemy" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Enemy_path" type="Path2D" parent="Enemy"]
position = Vector2(461, -122)
curve = SubResource("Curve2D_gabe5")

[node name="PathFollow2D" type="PathFollow2D" parent="Enemy/Enemy_path"]
position = Vector2(284, 227)
rotation = 0.0196053

[node name="Enemy_car" type="Sprite2D" parent="Enemy/Enemy_path/PathFollow2D"]
position = Vector2(-0.0353851, 0.0763245)
rotation = -0.0174533
scale = Vector2(0.75, 0.65)
texture = ExtResource("3_icqfb")
script = ExtResource("6_gcqa2")

[node name="Lap_Label" type="Label" parent="Enemy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00173611
anchor_right = 0.288194
anchor_bottom = 0.128086
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
theme = ExtResource("5_3r8lc")
metadata/_edit_use_anchors_ = true

[node name="Player" parent="." instance=ExtResource("6_xaxed")]
offset_left = 4.0
offset_top = 5.0
offset_right = 4.0
offset_bottom = 5.0

[node name="Lap_Label" parent="Player" index="0"]
anchor_left = -0.00260417
anchor_top = 0.0385802
anchor_right = 0.198785
anchor_bottom = 0.112654
offset_bottom = 0.0
theme = ExtResource("5_3r8lc")
label_settings = null

[node name="Player_path" parent="Player" index="1"]
position = Vector2(460, -53)

[node name="Player_car" parent="Player/Player_path/PathFollow2D" index="0"]
position = Vector2(-3.99942, 0.0904846)
rotation = -0.0174533
scale = Vector2(0.75, 0.65)
texture = ExtResource("6_o37fh")

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Math_Answer" parent="." instance=ExtResource("7_ktthu")]
anchor_left = 0.346354
anchor_top = 0.830246
anchor_right = 0.706597
anchor_bottom = 0.996914
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="GridContainer" parent="Math_Answer" index="0"]
metadata/_edit_use_anchors_ = true

[node name="Score_Label Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.796875
anchor_top = 0.00925926
anchor_right = 0.941841
anchor_bottom = 0.0864198
metadata/_edit_use_anchors_ = true

[node name="Current_Score Label" type="Label" parent="Score_Label Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.011976
anchor_right = 1.37125
anchor_bottom = 0.999999
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_3r8lc")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="endgame_screen" parent="." instance=ExtResource("7_g523i")]
visible = false

[node name="Mistake_Timer" type="Timer" parent="."]
one_shot = true

[node name="Question_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Correct_Answer_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
[connection signal="pressed" from="Math_Answer/GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Math_Answer/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Math_Answer/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Math_Answer/GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="timeout" from="Mistake_Timer" to="." method="_on_mistake_timer_timeout"]
[connection signal="timeout" from="Question_timer" to="." method="_on_question_timer_timeout"]
[connection signal="timeout" from="Correct_Answer_Timer" to="." method="_on_correct_answer_timer_timeout"]

[editable path="Player"]
[editable path="Math_Answer"]
